Fix newInstance() deprecation warning in PrintInfo